# KAJ-AI-REAL-BERT

./: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  bert_classifier.py  language.py  media_pipeline.py  nlp_features.py  text_pipeline.py  training_store.py
data/: current_viral_tests.json  training_samples.jsonl
data/models/: kaj_local_classifier.joblib
frontend/: app.js  index.html  styles.css
tests/: test_text_pipeline.py
